[Feature] Add delete route for document
